4B/cs444/tests/pass/pass_primitivecasts.joos
/* pass: primitive casts */
public class A {
  public A() {}
  public int m(byte x) {
    return (int)x;
  }
}
