4B/cs444/tests/fail/fail_finalformals.joos
/* fail: final formals */
public class A {
  public int m(final int x) {
    return x;
  }
}

 
